[package]
name = "trajedy"
version = "0.1.0"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "gsd",
]

[dependencies]
gsd = {path="gsd", version="0.1.0"}
rstar = {version="0.5.1", features=["serde"]}
nalgebra = "0.18.1"
structopt = {version="0.3.0", features=["paw"]}
paw = "1.0.0"
failure = "0.1.5"
streaming-stats = "0.2.2"
itertools="0.8.0"
serde = {version="~1.0.98", features=["derive"]}
csv = "1.1.1"
indicatif = "0.12.0"
threadpool = "1.7.1"
voronoi = { git="https://github.com/malramsay64/rust_voronoi" }

[dev-dependencies]
proptest = "*"
approx = "*"
criterion = "0.3.0"

[[bench]]
name = "analysis"
harness = false
