[package]
name = "trajedy"
version = "0.2.2"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "gsd",
]

[dependencies]
gsd = {path="gsd", version="0.2.0"}
rstar = {version="0.5.1", features=["serde"]}
nalgebra = "~0.18.1"
structopt = {version="0.3.3", features=["paw"]}
paw = "~1.0.0"
failure = "0.1.6"
streaming-stats = "0.2.2"
itertools="~0.8.0"
serde = {version="~1.0.98", features=["derive"]}
csv = "~1.1.1"
indicatif = "~0.12.0"
rayon = "1.2.0"
voronoi = { git="https://github.com/malramsay64/rust_voronoi" }

[dev-dependencies]
proptest = "*"
approx = "*"
criterion = "0.3.0"

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "gsd_iter"
harness = false

[[bench]]
name = "distance"
harness = false
