[package]
name = "trajedy"
version = "0.2.7"
authors = ["Malcolm Ramsay <malramsay64@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "gsd",
]

[dependencies]
gsd = {path="gsd", version="0.2.0"}
rstar = {version="0.9.3", features=["serde"]}
nalgebra = "~0.31.0"
clap = {version="3" ,features=["derive"]}
anyhow = "1"
streaming-stats = "0.2"
itertools="~0.10.0"
serde = {version="~1.0.98", features=["derive"]}
csv = "~1.1.1"
indicatif = "~0.16.0"
rayon = "~1.5.0"
voronoi = { git="https://github.com/malramsay64/rust_voronoi" }
num-traits = "~0.2.8"
alga = "~0.9.2"

[lib]
bench = false

[[bin]]
name = "trajedy"
path = "src/main.rs"
bench = false

[dev-dependencies]
proptest = "*"
approx = "*"
criterion = "~0.3.0"

[[bench]]
name = "analysis"
harness = false

[[bench]]
name = "gsd_iter"
harness = false

[[bench]]
name = "distance"
harness = false
